[package]
name = "rust-8"
version = "0.1.0"
authors = ["Thomas Sullivan <thomas.l.sullivan@vumc.org>"]
edition = "2018"

[[bin]]
name = "r8"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rand = "0.7.0"
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.67.0"
piston2d-opengl_graphics = "0.76.0"
piston_window = "*"
structopt = "0.3.21"
