[package]
name = "rust-8"
version = "0.1.0"
authors = ["Thomas Sullivan <thomas.l.sullivan@vumc.org>"]
edition = "2018"

[[bin]]
name = "r8"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
alsa-sys = "0.3.1"
rand = "0.7.0"
structopt = "0.3.21"
ggez = "0.5.1"
glam = { version = "0.12", features = ["mint"]}
